--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
     "js-cookie": "^3.0.5",
+    "next-intl": "^3.7.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
